# Oslo

./: .gitignore  Cargo.toml  OsloChainSpec.json  OsloMainnetChainSpec.json  OsloTestnetChainSpec.json  OsloTestnetSpec.json  README.md  StorageChainSpec.json  chainspec.json  customSpec.json  customSpecRaw.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: check.yml
.keys/: node-key
docs/: Oslo-setup-instructions.txt  rust-setup.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  command_helper.rs  main.rs  rpc.rs  service.rs
runtime/: Cargo.toml  build.rs
runtime/src/: account.rs  lib.rs  precompiles.rs
scripts/: insert-universal-node-key.sh  purge-chains.sh
