[package]
name = "oslo-network"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Asad Ali (asad.sial.4142@gmail.com)"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/asadalisiyal/oslo-network"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["aarch64-unknown-linux-gnu"]
#targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "oslo-network"

[dependencies]
serde_json = { version = "1.0.114", default-features = true, features = ["arbitrary_precision"] }
jsonrpsee = { default-features = false, version = "0.22", features = ["server", "macros"] }
clap = { workspace = true }
hex-literal = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
array-bytes = { workspace = true }

fp-rpc = { workspace = true }
fp-storage = { workspace = true }
fp-dynamic-fee = { workspace = true, default-features = true }

fc-rpc = { workspace = true }
fc-db = { workspace = true, features = ["rocksdb"] }
fc-consensus = { workspace = true }
fc-rpc-core = { workspace = true }
fc-mapping-sync = { workspace = true }
fc-api = { workspace = true }

sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.9.0" }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true, features = ["serde", "sp-keystore"] }
sp-timestamp = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true }
sp-api = { workspace = true }
sp-inherents = { workspace = true }

sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-rpc-api = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-keystore = { workspace = true }
sc-executor = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-offchain = { workspace = true }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.9.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.9.0" }
pallet-im-online = { workspace = true }
pallet-collective = { workspace = true }

frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }

# Local Dependencies
oslo-network-runtime = { path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.9.0" }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be built.
runtime-benchmarks = [
#	"oslo-network-runtime/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
]

try-runtime = [
#   "oslo-network-runtime/try-runtime",
#    "try-runtime-cli"
]