[package]
name = "oslo-network-runtime"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = { workspace = true }
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false

[package.metadata.docs.rs]
targets = ["aarch64-unknown-linux-gnu"]
#targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
getrandom = { version = "0.2.14", default-features = false, features = ["js"] }
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive", "serde"] }
serde = { workspace = true, features = ["derive"] }
libsecp256k1 = { workspace = true }
sha3 = { workspace = true }
log = { workspace = true }
impl-serde = { workspace = true }

pallet-assets = { workspace = true }
pallet-asset-rate = { workspace = true }
pallet-preimage = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-collective = { workspace = true }
pallet-democracy = { workspace = true }
pallet-treasury = { workspace = true }
pallet-aura = { workspace = true }
pallet-session = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }
frame-support = { workspace = true, features = ["experimental"] }
pallet-grandpa = { workspace = true }
sp-consensus-grandpa = { workspace = true, features = ["serde"] }
pallet-babe = { workspace = true }
pallet-sudo = { workspace = true }
frame-system = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
frame-executive = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true, features = ["serde"] }
sp-core = { workspace = true, features = ["serde"] }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true, features = ["serde"] }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true, features = ["serde"] }
sp-io = { workspace = true }
validator-set = { workspace = true }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.9.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.9.0", default-features = false }

# Used for runtime benchmarking
#frame-benchmarking = { workspace = true }
#frame-system-benchmarking = { workspace = true }

# evm dependencies
pallet-evm = { workspace = true }
pallet-evm-precompile-simple = { workspace = true }
pallet-evm-precompile-modexp = { workspace = true }
pallet-evm-precompile-sha3fips = { workspace = true }
pallet-ethereum = { workspace = true }
pallet-im-online = { workspace = true }
fp-evm = { workspace = true, features = ["serde"] }
fp-rpc = { workspace = true }
pallet-base-fee = { workspace = true }
fp-self-contained = { workspace = true, features = ["serde"] }

[features]
default = ["std"]
std = [
	"log/std",
	"sha3/std",
	"codec/std",
	"scale-info/std",
	"serde/std",
	"fp-evm/std",
	"fp-rpc/std",
	"fp-self-contained/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-asset-rate/std",
	"pallet-aura/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-base-fee/std",
	"pallet-evm/std",
	"pallet-session/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-ethereum/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-im-online/std",
	"pallet-collective/std",
	"pallet-democracy/std",
	"pallet-treasury/std",
	"pallet-scheduler/std",
	"pallet-preimage/std",
	"pallet-balances/std",
	"pallet-authorship/std",
	"sp-consensus-grandpa/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-io/std",
	"sp-transaction-pool/std",
	"sp-version/std",	
	"validator-set/std",
	"substrate-wasm-builder"
]

runtime-benchmarks = [
#	"frame-benchmarking/runtime-benchmarks",
#	"frame-support/runtime-benchmarks",
#	"frame-system-benchmarking/runtime-benchmarks",
#	"frame-system/runtime-benchmarks",
#	"pallet-balances/runtime-benchmarks",
#	"pallet-grandpa/runtime-benchmarks",
#	"pallet-timestamp/runtime-benchmarks",
#	"pallet-treasury/runtime-benchmarks",
#	"sp-runtime/runtime-benchmarks",
#	"pallet-im-online/runtime-benchmarks",
#	"pallet-collective/runtime-benchmarks",
#	"pallet-democracy/runtime-benchmarks",
#	"pallet-scheduler/runtime-benchmarks",
]

try-runtime = [
	#
]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.9.0", optional = true }
